# 2neighborly-inc-matrices

./: 2neighborlyPolytopes.txt  4d2n.txt  5d2n.txt  6d2n.txt  7d2n.txt  9d2n.txt  CMakeLists.txt  README.md
src/: main.cpp
src/headers/: CombType.h  Explorer.h  IncidenceMatrix.h  Polytope.h
src/implementation/: CombType.cpp  Explorer.cpp  IncidenceMatrix.cpp  Polytope.cpp
